# Pal

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
ban/: ban.ts  index.html
info/: index.html  info.ts
kick/: kick.ts
legacy_broadcast/: broadcast.ts  index.html
legacy_kick/: index.html
legacy_login/: index.html  login.ts
legacy_metrics/: metrics.ts
legacy_serversettings/: index.html
legacy_shutdown/: shutdown.ts
legacy_unban/: index.html  unban.ts
metrics/: index.html
playerlist/: index.html  playerlist.ts
save/: index.html  save.ts
serversettings/: serversettings.ts
shutdown/: index.html
src/: api_functions.ts  index.css  main.ts  main.tsx  styles.css
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: app.json  default.json  main.json
src-tauri/src/: lib.rs  main.rs
src/components/: Dashboard.tsx
src/lib/: tauribridge.ts  url.ts
src/services/: api.ts
